--- a/.env.example
+++ b/.env.example
@@ -10,7 +10,7 @@
 
 NEXTAUTH_SECRET=""
 NEXTAUTH_URL="http://localhost:3000"
-BLOB_READ_WRITE_TOKEN="vercel_blob_rw_YXCXlmkL7ASJdRIs_7YLDU0uAjvAMGzBzy7z3osmsM2LgTQ"
+BLOB_READ_WRITE_TOKEN="vercel_blob_rw"
 
 
 DATABASE_URL="postgresql://postgres:postgres@localhost:5432/cybercap-db?schema=public?preparedStatementCacheQueries=0"
